agregué el parrafo

--- a/aprendiendogit.html
+++ b/aprendiendogit.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Aprendiendo Git 2022</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Proyecto Base</h1>
-    
-</body>
+
+    <p>
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores est,
+      repudiandae ut iure provident accusantium cupiditate aut corporis
+      blanditiis libero sint voluptatibus? Eveniet, assumenda! Sapiente esse
+      similique explicabo architecto deserunt!
+    </p>
+  </body>
 </html>
